--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,6 @@
 <header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li>
-        <a href="./1-timer.html" class="nav-item">Timer</a>
-      </li>
-
-      <li>
-        <a href="./2-snackbar.html" class="nav-item">Snackbar</a>
-      </li>
-    </ul>
-  </nav>
+  <div class="header-wrap">
+    <img src="./img/go-it.svg" alt="GO-IT logo" />
+    <h1 class="title">goit-js-hw-10</h1>
+  </div>
 </header>
