--- a/src/css/common.css
+++ b/src/css/common.css
@@ -15,7 +15,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #fafafa;
-  color: #212121;
+  color: #2e2f42;
 }
 
 section {
@@ -23,7 +23,38 @@ section {
   justify-items: center;
 }
 
-[type='submit'],
+input {
+  display: flex;
+  align-items: center;
+
+  border: 1px solid #808080;
+  border-radius: 4px;
+
+  height: 40px;
+  width: 100%;
+  padding-left: 16px;
+
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  background-color: transparent;
+}
+
+input:hover {
+  border-color: #2e2f42;
+}
+
+input:focus {
+  border-color: #4e75ff;
+}
+
+input:disabled {
+  border-color: #808080;
+  color: #808080;
+}
+
+button,
 .nav-item {
   border-style: none;
 
@@ -32,7 +63,6 @@ section {
   justify-content: center;
 
   height: 40px;
-  width: 150px;
   padding: 8px 16px;
   margin-bottom: 16px;
   border-radius: 8px;
@@ -49,12 +79,12 @@ section {
   /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 
-[type='submit']:hover,
+button:hover,
 .nav-item:hover {
   background: #6c8cff;
 }
 
-[type='submit']:focus,
+button:focus,
 .nav-item:focus {
   box-shadow: inset 0 2px 2px 0 rgba(0, 0, 0, 0.15);
 }
