--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,3 +7,5 @@
 @import url('./reset.css');
 @import url('./common.css');
 @import url('./header.css');
+@import url('./1-timer.css');
+@import url('./2-snackbar.css');
