validation of the delay value, cursor styles

--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -22,8 +22,9 @@
 
 [type='button']:disabled {
   background: #cfcfcf;
+  cursor: default;
 }
 
-/* [type='text'] {
-  width: 280px;
-} */
+.flatpickr-input[readonly]:disabled {
+  cursor: default;
+}
